ignoring stuff and adding one more random config change (netherex)

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ config/ichunutil.cfg
 config/jei/worldSettings.cfg
 config/tlf/hidden.txt
 config/tlf/HideNames.cfg
+config/AppliedEnergistics2/CustomRecipes.cfg
+config/jei/worldSettings.cfg
