--- a/config/worldstripper.cfg
+++ b/config/worldstripper.cfg
@@ -31,6 +31,9 @@ general {
         minecraft:end_stone
         minecraft:red_flower
         minecraft:double_plant
+		undergroundbiomes:igneous_stone
+        undergroundbiomes:metamorphic_stone
+        undergroundbiomes:sedimentary_stone
      >
 
     # A list of blocks to strip away from the world [default: [minecraft:dirt], [minecraft:grass], [minecraft:stone], [minecraft:gravel], [minecraft:sand], [minecraft:sandstone], [minecraft:log], [minecraft:log2], [minecraft:leaves], [minecraft:leaves2], [minecraft:water], [minecraft:flowing_water], [minecraft:lava], [minecraft:flowing_lava], [minecraft:tallgrass], [minecraft:netherrack], [minecraft:end_stone], [minecraft:red_flower], [minecraft:double_plant]]
