First oregen disable pass

--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -31,7 +31,7 @@ difficulty {
     # Set to your preferred game mode. Mismatch with the server may cause visual glitches with recipes. [default: EASY] [valid: [OP, EASY, NORMAL, HARD]]
     S:game.mode=EASY
 
-    # Forces recreation of the game mode definitions in config/forestry/gamemodes.
+    # Forces recreation of the game mode definitions in config/forestry/gamemodes. [default: true]
     B:recreate.definitions=false
 }
 
@@ -269,17 +269,17 @@ world {
 
         ore {
             # Generates apatite ore blocks in the world. [default: true]
-            B:apatite=true
+            B:apatite=false
 
             # Generates copper ore blocks in the world. [default: true]
-            B:copper=true
+            B:copper=false
             I:dimBlacklist <
              >
             I:dimWhitelist <
              >
 
             # Generates tin ore blocks in the world. [default: true]
-            B:tin=true
+            B:tin=false
         }
 
         trees {
