--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -90,15 +90,15 @@ craftingcpu {
 features {
 
     world {
-        B:CertusOre=true
-        B:CertusQuartzWorldGen=true
-        B:ChargedCertusOre=true
+        B:CertusOre=false
+        B:CertusQuartzWorldGen=false
+        B:ChargedCertusOre=false
         B:ChestLoot=true
 
         # Blocks that are not used in any essential recipes, also slabs and stairs.
         B:DecorativeBlocks=true
         B:DecorativeLights=true
-        B:Flour=true
+        B:Flour=false
         B:MeteoriteWorldGen=true
         B:SkyStoneChests=true
         B:SpawnPressesInMeteorites=true
