--- a/config/astralsorcery.cfg
+++ b/config/astralsorcery.cfg
@@ -762,13 +762,13 @@ worldgen {
     B:enableFlatGen=false
 
     # Defines how many aquamarine ores it'll attempt to generate in per chunk. 0 = disabled [range: 0 ~ 2048, default: 64]
-    I:generateAquamarineAmount=64
+    I:generateAquamarineAmount=0
 
     # Defines how many marble veins are generated per chunk. 0 = disabled [range: 0 ~ 32, default: 4]
-    I:generateMarbleAmount=4
+    I:generateMarbleAmount=0
 
     # Defines how big generated marble veins are. [range: 1 ~ 32, default: 20]
-    I:generateMarbleVeinSize=20
+    I:generateMarbleVeinSize=0
 
     # If this is set to true, the world generator will try and spawn structures more evenly distributed by their 'ideal' distance set in their config entries. WARNING: might add additional worldgen time. [default: true]
     B:respectIdealStructureDistances=true
@@ -996,7 +996,7 @@ worldgen {
          >
 
         # Generate rockcrystals [default: true]
-        B:Generate=true
+        B:Generate=false
 
         # Ignore Biome specifications when trying to generate rockcrystals [default: true]
         B:IgnoreBiomeSpecification=true
