--- a/config/deepresonance/main.cfg
+++ b/config/deepresonance/main.cfg
@@ -410,49 +410,49 @@ supergen {
 
 worldgen {
     # Chances for the ore to spawn in a chunk
-    I:chancesToSpawn=5
+    I:chancesToSpawn=0
 
     # The chance that a crystal will spawn in a chunk. Higher number means less chance. 0 means no crystal will ever spawn.
-    I:crystalSpawnChance=15
+    I:crystalSpawnChance=0
 
     # The number of times that the worldgen will try to spawn a crystal in a chunk before it fails.
     I:crystalSpawnTries=10
 
     # Enable this if you want resonating crystals in other dimensions (if they have stone caves)
-    B:generateCrystalsOtherDimensions=true
+    B:generateCrystalsOtherDimensions=false
 
     # Enable this if you want resonating ore in the end
     B:generateEndOre=false
 
     # Enable this if you want resonating crystals in the nether
-    B:generateNetherCrystals=true
+    B:generateNetherCrystals=false
 
     # Enable this if you want resonating ore in the nether
-    B:generateNetherOre=true
+    B:generateNetherOre=false
 
     # Enable this if you want resonating ore in other dimensions (if they have stone)
-    B:generateOreOtherDimensions=true
+    B:generateOreOtherDimensions=false
 
     # Enable this if you want resonating crystals in the overworld
-    B:generateOverworldCrystals=true
+    B:generateOverworldCrystals=false
 
     # Enable this if you want resonating ore in the overworld
-    B:generateOverworldOre=true
+    B:generateOverworldOre=false
 
     # Maximum size of the ore veines
-    I:maxOreVeinSize=4
+    I:maxOreVeinSize=0
 
     # Maximum ore height
     I:maxY=30
 
     # Minimum size of the ore veines
-    I:minOreVeinSize=2
+    I:minOreVeinSize=0
 
     # Minimum ore height
     I:minY=2
 
     # Enable this if you want to get retrogen (generation of ores/crystals) for already existing chunks
-    B:retrogen=true
+    B:retrogen=false
 
     # Enable this if you want to see in the log where crystals are spawned
     B:verboseSpawn=false
