--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -122,13 +122,13 @@ all {
     B:"Generate Dragon Skeletons"=true
 
     # Whether to generate glacier biomes or not [default: true]
-    B:"Generate Glaciers"=true
+    B:"Generate Glaciers"=false
 
     # Whether to generate sapphire ore or not [default: true]
     B:"Generate Sapphire Ore"=true
 
     # Whether to generate silver ore or not [default: true]
-    B:"Generate Silver Ore"=true
+    B:"Generate Silver Ore"=false
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 100]
     I:"Generate Snow Village Chance"=100
