--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -148,6 +148,26 @@ crafting {
     B:com.pam.harvestcraft.blocks.blocks.BeeBlock=true
     B:com.pam.harvestcraft.blocks.blocks.WellBlock=true
     B:com.phylogeny.extrabitmanipulation.block.BlockBodyPartTemplate=true
+    B:com.wiresegal.naturalpledge.common.block.BlockStorage=true
+    B:"com.wiresegal.naturalpledge.common.block.ModBlocks$1$1"=true
+    B:"com.wiresegal.naturalpledge.common.block.ModBlocks$3$1"=true
+    B:com.wiresegal.naturalpledge.common.block.alt.BlockAltPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockAuroraDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockAuroraLog=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockColoredLamp=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockIridescentDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks=true
+    B:"com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks$BlockAuroraPlanks"=true
+    B:"com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks$BlockRainbowPlanks"=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockRainbowDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockRainbowLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.calico.BlockCalicoLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.calico.BlockCalicoPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockAmplifier=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockSealPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockSealingLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderPlanks=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
     B:dmfmm.catwalks.block.StairBlock=true
     B:electroblob.wizardry.block.BlockCrystalOre=true
