--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,12 +2,7 @@
 
 ~CONFIG_VERSION: 0.1.0
 
-world1544803905 {
-    S:filterText=
-}
-
-
-world3556498 {
+world-78688046 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
 
@@ -16,6 +11,19 @@ world3556498 {
     S:filterText=
 
     # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
+world1544803905 {
+    S:filterText=
+}
+
+
+world3556498 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
