--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ config/tlf/hidden.txt
 config/tlf/HideNames.cfg
 config/AppliedEnergistics2/CustomRecipes.cfg
 config/jei/worldSettings.cfg
+config/AppliedEnergistics2/CustomRecipes.cfg
