--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -123,7 +123,7 @@ providers {
         topaddons:rustic
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [animania:blocks], [mcjtylib:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [topaddons:base], [topaddons:binnie's mods], [topaddons:chisel], [topaddons:forestry], [topaddons:iceandfire], [topaddons:opencomputers], [topaddons:storagedrawers], [topaddons:unlimitedchiselworks], [topaddons:vanilla], [topaddons:rustic], [cookingforblockheads], [mekanism], [shetiphian.core]]
+    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [animania:blocks], [mcjtylib:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [topaddons:base], [topaddons:binnie's mods], [topaddons:chisel], [topaddons:forestry], [topaddons:iceandfire], [topaddons:opencomputers], [topaddons:storagedrawers], [topaddons:unlimitedchiselworks], [topaddons:vanilla], [topaddons:rustic], [mekanism], [computronics:block], [cookingforblockheads], [shetiphian.core]]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -181,8 +181,6 @@ theoneprobe {
 
     # How much time (ms) to wait before reporting an exception again [range: 1 ~ 10000000, default: 20000]
     I:loggingThrowableTimeout=20000
-
-    # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
     I:needsProbe=3
 
     # Distance at which the probe works [range: 0.1 ~ 200.0, default: 6.0]
