--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1169,7 +1169,7 @@ world {
     B:"Default world options"=true
     B:"Depth mobs"=true
     B:"Fairy rings"=true
-    B:"Generate clay underground like dirt"=true
+    B:"Generate clay underground like dirt"=false
     B:"Guardians spawn in oceans"=true
     B:"Nether fossils"=true
     B:"Nether smoker"=true
@@ -1180,7 +1180,7 @@ world {
     # https://www.reddit.com/r/Minecraft/comments/4nfw3t/more_realistic_generation_preset_in_comment/
     # If you want to use it in multiplayer, set the world type to "quark_realistic"
     B:"Realistic world type"=true
-    B:"Revamp stone gen"=true
+    B:"Revamp stone gen"=false
     B:Speleothems=true
     B:"Underground biomes"=true
     B:"Varied dungeons"=true
