Updated a bunch of mods

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -69,6 +69,8 @@ armor {
 
 
 condenser {
+    I:condenser_max_size=24
+    I:condenser_min_size=1
 }
 
 
@@ -701,6 +703,14 @@ generators {
 
 
 heat_exchanger {
+    D:heat_exchanger_conductivity <
+        0.9
+        1.0
+        1.2
+     >
+    D:heat_exchanger_coolant_mult=30.0
+    I:heat_exchanger_max_size=24
+    I:heat_exchanger_min_size=1
 }
 
 
@@ -1169,6 +1179,7 @@ salt_fission {
 
     # Percentage heat level of a salt fission reactor at which Redstone Emitters will output a full-strength redstone signal.
     I:salt_fission_redstone_max_heat=50
+    I:salt_fission_max_distribution_rate=4
 }
 
 
@@ -1244,6 +1255,8 @@ tools {
 
 
 turbine {
+    I:turbine_max_size=24
+    I:turbine_min_size=1
 }
 
 
