--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -93,6 +93,11 @@ inputreplacement {
 }
 
 
+integrations {
+    B:ieIntegrationDuplicateRemoval=true
+}
+
+
 modules {
     # Integration Module.
     # if false all the Integrations will be disabled.
