--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -29,6 +29,17 @@ biomes {
 }
 
 
+black_hole_generator {
+    S:blackHoleTimings <
+        minecraft:stone;1
+        minecraft:dirt;1
+        minecraft:netherrack;1
+        minecraft:cobblestone;1
+     >
+    I:defaultBurnTime=500
+}
+
+
 ##########################################################################################################
 # client
 #--------------------------------------------------------------------------------------------------------#
@@ -108,9 +119,11 @@ general {
 
     # If true dimensions not added by AR can be terraformed, including the overworld
     B:allowTerraformingNonARWorlds=false
+    B:allowZeroGSpacestations=false
 
     # How many blocks have the biome changed per tick.  Large numbers can slow the server down
     I:biomeUpdateSpeed=1
+    I:blackHoleGeneratorMultiplier=1
 
     # Multiplier for the build speed of the Rocket Builder (0.5 is twice as fast 2 is half as fast
     D:buildSpeedMultiplier=1.0
