--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -3,20 +3,36 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-78688046 {
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=prospect
-
-    # Show the list of ingredients next to open guis.
+    S:filterText=diamond
     B:overlayEnabled=true
 }
 
 
 world1544803905 {
     S:filterText=
+}
+
+
+world246055144 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world3552 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
 }
 
 
