--- a/config/novamterram.cfg
+++ b/config/novamterram.cfg
@@ -3,14 +3,20 @@
 ##########################################################################################################
 # cool biomes
 #--------------------------------------------------------------------------------------------------------#
-# Cool Biome configuration
+# Cool Biome Configuration
 ##########################################################################################################
 
 "cool biomes" {
     B:disableAutumnTaiga=false
     B:disableAutumnTaigaHills=false
+    B:disableBlueTaiga=false
+    B:disableBlueTaigaHills=false
     B:disableCliffs=false
+    B:disableConiferousPlains=false
     B:disableMegaAutumnTaiga=false
+    B:disableMegaAutumnTaigaHills=false
+    B:disableMegaBlueTaiga=false
+    B:disableMegaBlueTaigaHills=false
     B:disablePineForest=false
     B:disableTaigaPlains=false
 }
@@ -19,67 +25,124 @@
 ##########################################################################################################
 # desert biomes
 #--------------------------------------------------------------------------------------------------------#
-# Desert Biome configuration
+# Desert Biome Configuration
 ##########################################################################################################
 
 "desert biomes" {
+    B:disableClayland=false
     B:disableClaylands=false
+    B:disableGoldenSavanna=false
+    B:disableGoldenSavannaPlateau=false
+    B:disableLushDesert=false
     B:disableOutback=false
+    B:disableRedSandDune=false
     B:disableRedSandDunes=false
+    B:disableRockland=false
     B:disableRocklands=false
     B:disableSahel=false
+    B:disableSandDune=false
     B:disableSandDunes=false
+    B:disableSandyScrubland=false
     B:disableSavannaScrub=false
+    B:disableScrubland=false
+    B:disableSerengeti=false
 }
 
 
 ##########################################################################################################
 # icy biomes
 #--------------------------------------------------------------------------------------------------------#
-# Icy Biome configuration
+# Icy Biome Configuration
 ##########################################################################################################
 
 "icy biomes" {
     B:disableAlps=false
     B:disableColdBirchForest=false
+    B:disableColdBirchForestHills=false
+    B:disableColdBlueTaiga=false
+    B:disableColdBlueTaigaHills=false
+    B:disableColdFlowerForest=false
+    B:disableColdFlowerForestHills=false
     B:disableColdForest=false
+    B:disableColdForestHills=false
+    B:disableColdMegaBlueTaiga=false
+    B:disableColdMegaBlueTaigaHills=false
     B:disableColdMegaSpruceTaiga=false
+    B:disableColdMegaSpruceTaigaHills=false
     B:disableColdMegaTaiga=false
+    B:disableColdMegaTaigaHills=false
     B:disableColdRoofedForest=false
+    B:disableColdRoofedForestHills=false
     B:disableIcyTundra=false
+    B:disableSnowDune=false
     B:disableSnowyPineForest=false
     B:disableTundra=false
 }
 
 
 ##########################################################################################################
+# other stuff
+#--------------------------------------------------------------------------------------------------------#
+# Other Stuff Configuration
+##########################################################################################################
+
+"other stuff" {
+    B:disableBoulders=false
+}
+
+
+##########################################################################################################
 # warm biomes
 #--------------------------------------------------------------------------------------------------------#
-# Warm Biome configuration
+# Warm Biome Configuration
 ##########################################################################################################
 
 "warm biomes" {
+    B:disableAegeanArchipelago=false
+    B:disableAliumMeadow=false
     B:disableBirchHills=false
     B:disableBlossomForest=false
     B:disableBlossomForestHills=false
     B:disableBog=false
     B:disableDenseMixedForest=false
+    B:disableDenseMixedForestHills=false
     B:disableDenseShrubland=false
     B:disableDryForest=false
     B:disableDryForestHills=false
     B:disableEstuary=false
+    B:disableFloralMeadow=false
+    B:disableForestedLakes=false
     B:disableFungalJungle=false
+    B:disableFungalJungleHills=false
+    B:disableGreenMixedForest=false
+    B:disableGreenMixedForestHills=false
     B:disableGreenSwamp=false
+    B:disableHighland=false
     B:disableHighlands=false
+    B:disableHills=false
+    B:disableHotSpring=false
     B:disableLake=false
+    B:disableLowland=false
     B:disableLowlands=false
+    B:disableMapleForest=false
+    B:disableMapleForestHills=false
     B:disableMeadow=false
+    B:disableMegaMapleForest=false
+    B:disableMegaMapleForestHills=false
     B:disableMixedForest=false
+    B:disableMixedForestHills=false
+    B:disableMoorland=false
+    B:disableMountains=false
     B:disableOakForest=false
+    B:disableOakForestHills=false
+    B:disablePineland=false
     B:disablePinelands=false
+    B:disablePoppyMeadow=false
+    B:disableRockyTaiga=false
     B:disableShrubland=false
     B:disableSprings=false
     B:disableTallOakForest=false
+    B:disableTallOakForestHills=false
 }
 
 
