--- a/config/crossroads.cfg
+++ b/config/crossroads.cfg
@@ -44,7 +44,7 @@ misc {
 ores {
     B:"Generate Copper Ore?"=false
     B:"Generate Native Copper Ore?"=false
-    B:"Generate Ruby Ore?"=false
+    B:"Generate Ruby Ore?"=true
     B:"Generate Tin Ore?"=false
 
     # Disabling this will make Crossroads copper/tin/bronze completely useless. The recipes will need copper/tin/bronze from other mods. Don't ask me why you'd want this.
@@ -56,7 +56,7 @@ ores {
 
 
 specializations {
-    B:"Allow Multiple specializations per player in MultiPlayer? (Default false)"=false
+    B:"Allow Multiple specializations per player in MultiPlayer? (Default false)"=true
     B:"Allow Multiple specializations per player in SinglePlayer? (Default true)"=true
     B:"Enable Alchemy? (Default true)"=true
     B:"Enable Technomancy? (Default true)"=true
