Configured a bunch of mods

--- a/config/bamboozled.cfg
+++ b/config/bamboozled.cfg
@@ -28,7 +28,7 @@ world {
     B:generate_bamboo=true
 
     # Should halite clusters be generated underground?
-    B:generate_salt_ore=true
+    B:generate_salt_ore=false
 
     # The size of generated halite clusters
     I:salt_ore_cluster_size=8
