--- a/config/bibliocraft.cfg
+++ b/config/bibliocraft.cfg
@@ -8,8 +8,8 @@
 
 "blocks enabled" {
     B:Armorstand=true
-    B:AtlasBook=true
-    B:AtlasEternalCompass=true
+    B:AtlasBook=false
+    B:AtlasEternalCompass=false
     B:BigBook=true
     B:Bookcase=true
     B:Clipboard=true
