--- a/config/cfm.cfg
+++ b/config/cfm.cfg
@@ -159,34 +159,34 @@ recipe-settings {
     B:microwave-2=true
 
     # 16 Hardened Clay for 1 Emerald [default: true]
-    B:minebay-1=true
+    B:minebay-1=false
 
     # 1 Recipe Book for 1 Emerald [default: true]
-    B:minebay-10=true
+    B:minebay-10=false
 
     # 1 Skeleton Skull for 8 Emeralds [default: true]
-    B:minebay-2=true
+    B:minebay-2=false
 
     # 1 Saddle for 4 Emeralds [default: true]
-    B:minebay-3=true
+    B:minebay-3=false
 
     # 1 Horse Spawn Egg for 8 Emeralds [default: true]
-    B:minebay-4=true
+    B:minebay-4=false
 
     # 1 Diamond Horse Armour for 8 Diamonds [default: true]
-    B:minebay-5=true
+    B:minebay-5=false
 
     # 1 Experience Bottle for 1 Iron Ingot [default: true]
-    B:minebay-6=true
+    B:minebay-6=false
 
     # 4 Christmas Firework for 1 Iron Ingot [default: true]
-    B:minebay-7=true
+    B:minebay-7=false
 
     # 1 Silk Touch Book for 8 Emeralds [default: true]
-    B:minebay-8=true
+    B:minebay-8=false
 
     # 2 Night Vision Potion for 1 Emerald [default: true]
-    B:minebay-9=true
+    B:minebay-9=false
 
     # Beef -> Cooked Beef [default: true]
     B:oven-1=true
