--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -107,10 +107,10 @@ experience {
 
 hunger {
     # Set to true to enable hunger module
-    B:"Enable Hunger Module"=false
+    B:"Enable Hunger Module"=true
 
     # Set to true to retain food level on death
-    B:"Keep Food Level"=false
+    B:"Keep Food Level"=true
 
     # Highest amount of food level you can respawn with
     I:"Maximum Food Level"=20
@@ -131,7 +131,7 @@ hunger {
 
 inventory {
     # Set to true to enable inventory module
-    B:"Enable Inventory Module"=false
+    B:"Enable Inventory Module"=true
 
     # Set to true to keep equipped armor on death
     B:"Keep Armor"=false
@@ -194,19 +194,19 @@ inventory {
 
     soulbinding {
         # Set to true to enable Soulbinding enchantment
-        B:"Enable Soulbinding Enchantment"=false
+        B:"Enable Soulbinding Enchantment"=true
 
         # The max level of the enchantment
-        I:"Max Level"=1
+        I:"Max Level"=2
 
         # The percent chance that the item will drop a level in the enchantment on death when kept
         D:"Chance to Drop Level on Saved Item"=0.0
 
         # The base percent chance that the enchantment will save an item on death regardless of level
-        D:"Base Save Probability"=1.0
+        D:"Base Save Probability"=0.5
 
         # The percent chance increase that each level in the enchantment will give to saving an item on death
-        D:"Extra Save Probability per Level"=0.0
+        D:"Extra Save Probability per Level"=0.5
 
         # Set to true to allow enchanting Soulbinding at the enchantment table
         B:"Can Apply at Enchanting Table"=true
