--- a/config/erebus.cfg
+++ b/config/erebus.cfg
@@ -40,7 +40,7 @@ ores {
     B:"Generate fossil"=true
     B:"Generate gneiss"=true
     B:"Generate gold"=true
-    B:"Generate iron"=false
+    B:"Generate iron"=true
     B:"Generate jade"=true
     B:"Generate lapis"=true
     B:"Generate lead"=false
