--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -26,7 +26,7 @@ all {
     I:"Cockatrice chicken Search Length"=40
 
     # Whether to display the dragon on the main menu or not [default: true]
-    B:"Custom main menu"=true
+    B:"Custom main menu"=false
 
     # How many blocks away can cyclopes detect sheep. Note that increasing this could cause lag. [range: 1 ~ 10000, default: 17]
     I:"Cyclopes Sheep Search Length"=17
@@ -53,7 +53,7 @@ all {
     I:"Death Worm Spawn Check Chance"=3
 
     # Deathworm spawn weight. Lower = lower chance to spawn [range: 1 ~ 10000, default: 2]
-    I:"Death Worm Spawn Weight"=2
+    I:"Death Worm Spawn Weight"=1
 
     # How many blocks away can death worms spot potential prey. Note that increasing this could cause lag [range: 1 ~ 10000, default: 64]
     I:"Death Worm Target Search Length"=64
@@ -104,7 +104,7 @@ all {
     B:"Dragons Dig When Stuck"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 180]
-    I:"Generate Dragon Cave Chance"=180
+    I:"Generate Dragon Cave Chance"=220
 
     # Whether to generate dragon caves or not [default: true]
     B:"Generate Dragon Caves"=true
@@ -113,19 +113,19 @@ all {
     I:"Generate Dragon Roost Chance"=360
 
     # Whether to generate dragon roosts or not [default: true]
-    B:"Generate Dragon Roosts"=true
+    B:"Generate Dragon Roosts"=false
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 300]
     I:"Generate Dragon Skeleton Chance"=300
 
     # Whether to generate dragon skeletons or not [default: true]
-    B:"Generate Dragon Skeletons"=true
+    B:"Generate Dragon Skeletons"=false
 
     # Whether to generate glacier biomes or not [default: true]
     B:"Generate Glaciers"=false
 
     # Whether to generate sapphire ore or not [default: true]
-    B:"Generate Sapphire Ore"=true
+    B:"Generate Sapphire Ore"=false
 
     # Whether to generate silver ore or not [default: true]
     B:"Generate Silver Ore"=false
@@ -185,7 +185,7 @@ all {
     B:"Spawn Hippocampus"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 70]
-    I:"Spawn Hippocampus Chance"=70
+    I:"Spawn Hippocampus Chance"=90
 
     # True if hippogryphs are allowed to spawn [default: true]
     B:"Spawn Hippogryphs"=true
@@ -200,7 +200,7 @@ all {
     B:"Spawn Sirens"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 300]
-    I:"Spawn Sirens Chance"=300
+    I:"Spawn Sirens Chance"=350
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 100]
     I:"Spawn Stymhphalian Bird Chance"=100
@@ -255,7 +255,7 @@ all {
      >
 
     # true to use dimensional blacklist, false to use the whitelist. [default: true]
-    B:"use Dimension Blacklist"=true
+    B:"use Dimension Blacklist"=false
 }
 
 
