--- a/config/ignitehud.cfg
+++ b/config/ignitehud.cfg
@@ -17,10 +17,10 @@ toughasnails {
 
 vanilla {
     # config.ignitehud.durabilities.tooltip
-    B:config.ignitehud.durabilities=true
+    B:config.ignitehud.durabilities=false
 
     # config.ignitehud.target.tooltip
-    B:config.ignitehud.target=true
+    B:config.ignitehud.target=false
 
     # config.ignitehud.clock.tooltip
     B:config.ignitehud.clock=true
