--- a/config/jaff.cfg
+++ b/config/jaff.cfg
@@ -23,7 +23,7 @@ restrictions {
 
     # Comma separated list of dimension ids which the fish can only spawn in.
     # Overrides the blacklist if not empty. [default: ]
-    S:"Dimension Whitelist"=
+    S:"Dimension Whitelist"=0
 
     # List of fluid blocks which the fish should not spawn in. [default: [BiomesOPlenty:poison], [BuildCraft|Energy:blockOil]]
     S:"Fluid Blacklist" <
