--- a/config/mekanism.cfg
+++ b/config/mekanism.cfg
@@ -6,7 +6,7 @@ client {
     B:EnableAmbientLighting=true
     B:EnableMachineSounds=true
     B:EnablePlayerSounds=true
-    B:Holidays=true
+    B:Holidays=false
     B:MachineEffects=true
     B:OpaqueTransmitterRender=false
 
@@ -18,7 +18,7 @@ client {
 
 general {
     B:AestheticWorldDamage=true
-    B:AllowChunkloading=true
+    B:AllowChunkloading=false
     B:AllowProtection=true
     B:AllowSpawnerBoxPickup=true
     B:AllowTransmitterAlloyUpgrade=true
@@ -154,7 +154,7 @@ machines {
     B:RotaryCondensentratorEnabled=true
     B:SeismicVibratorEnabled=true
     B:SolarNeutronActivatorEnabled=true
-    B:TeleporterEnabled=true
+    B:TeleporterEnabled=false
 }
 
 
