--- a/config/openglider.cfg
+++ b/config/openglider.cfg
@@ -86,7 +86,7 @@
     I:"Durability Timeframe"=200
 
     # Enables durability usage of the hang glider when gliding. [default: true]
-    B:"Enable Durability"=true
+    B:"Enable Durability"=false
 }
 
 
