--- a/config/schematica.cfg
+++ b/config/schematica.cfg
@@ -7,7 +7,7 @@ debug {
     B:dumpBlockList=false
 
     # Display extra information on the debug screen (F3).
-    B:showDebugInfo=true
+    B:showDebugInfo=false
 }
 
 
