--- a/config/undergroundbiomes.cfg
+++ b/config/undergroundbiomes.cfg
@@ -148,7 +148,7 @@ visual {
     B:HarmoniousStrata=false
 
     # Comma-separated list of dimension IDs, put * to use exclude list
-    S:IncludedDimensions=*
+    S:IncludedDimensions=0,111,112
 
     # Integrate vanilla stone into the world generation
     # Will cause sharp biome transitions if changed while playing the same world
