--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -21,7 +21,7 @@ _global {
     # Whether features that are based on the time of year should be enabled.
     # An example is chests turning to presents when it's Christmas.
     # Note that this will not affect vanilla's own seasonal features.
-    B:"Enable Seasonal Features"=true
+    B:"Enable Seasonal Features"=false
 
     # Set this to false to disable the q button in the main and pause menus.
     # If you disable this, you can still access the quark config from Mod Options > Quark > Config
