--- a/config/Guide-API/Guide-API.cfg
+++ b/config/Guide-API/Guide-API.cfg
@@ -9,7 +9,7 @@
 books {
     # Allows books to spawn with new players.
     # This is a global override for all books. [default: true]
-    B:canSpawnWithBooks=true
+    B:canSpawnWithBooks=false
 
     ##########################################################################################################
     # spawn
@@ -20,7 +20,7 @@ books {
 
     spawn {
         #  [default: true]
-        B:"crossroads:crossroadsmainguide"=true
+        B:"crossroads:crossroadsmainguide"=false
 
         #  [default: false]
         B:"crossroads:info_guide"=false
