--- a/config/aroma1997/aromabackup.cfg
+++ b/config/aroma1997/aromabackup.cfg
@@ -25,7 +25,7 @@ backup_schedule {
     I:fullBackupsToKeep=30
 
     # How many incremental backups to create. Set to something bigger that 0 to enable. If this is set to for example 5, then there will be one full backup, 5 incremental backups and then the next full backup and so on. [range: 0 ~ 500, default: 0]
-    I:incrementalBackupsToCreate=0
+    I:incrementalBackupsToCreate=2
 
     # How many incremental backups to keep. When there are this many incremental backups, the oldest incremental backup will be deleted together with all backups, that depend on it. [range: 1 ~ 2147483647, default: 100]
     I:incrementalBackupsToKeep=100
@@ -40,7 +40,7 @@ backup_schedule {
 
 general {
     # If all players or only admins can use the /backup command.
-    B:allPlayers=true
+    B:allPlayers=false
 
     # If the blacklist is enabled, the dimensions (ids) specified here will not be backed up.
     I:blacklist <
