--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -13,6 +13,7 @@ general {
 
     # List of additional Lost City dimensions. Format '<id>:<profile>' [default: ]
     S:additionalDimensions <
+		110:wasteland
      >
 
     # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [/assets/lostcities/citydata/conditions.json], [/assets/lostcities/citydata/palette.json], [/assets/lostcities/citydata/palette_desert.json], [/assets/lostcities/citydata/palette_chisel.json], [/assets/lostcities/citydata/palette_chisel_desert.json], [/assets/lostcities/citydata/highwayparts.json], [/assets/lostcities/citydata/railparts.json], [/assets/lostcities/citydata/monorailparts.json], [/assets/lostcities/citydata/buildingparts.json], [/assets/lostcities/citydata/library.json], [$lostcities/userassets.json]]
@@ -47,10 +48,10 @@ general {
     B:dimensionBoP=true
 
     # The 'ID' of the Lost City Dimension. Set to -1 if you don't want this dimension [range: -10000 ~ 10000, default: 111]
-    I:dimensionId=111
+    I:dimensionId=-1
 
     # The 'profile' to use for generation of the Lost City dimension [default: default]
-    S:dimensionProfile=default
+    S:dimensionProfile=wasteland
 
     # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [bio_wasteland], [water_empty]]
     S:privateProfiles <
