--- a/config/cursesilence.cfg
+++ b/config/cursesilence.cfg
@@ -6,7 +6,7 @@ general {
     # Reduce
     # Remove
     # Shift
-    S:mode=remove
+    S:mode=Remove
 
     # When this is true enchanted books won't be affected
     B:show_books=true
