--- a/config/integrateddynamics.cfg
+++ b/config/integrateddynamics.cfg
@@ -47,7 +47,7 @@ block {
 
 core {
     # If an anonymous mod startup analytics request may be sent to our analytics service.
-    B:general.analytics=true
+    B:general.analytics=false
 
     # If cable models should be cached for rendering optimization.
     B:general.cacheCableModels=true
@@ -66,7 +66,7 @@ core {
     S:general.version=0.11.17
 
     # If the version checker should be enabled.
-    B:general.versionChecker=true
+    B:general.versionChecker=false
 }
 
 
@@ -89,10 +89,10 @@ item {
 
     # If the berries should give the night vision effect when eaten.
     B:menril_berries.nightVision=true
-    B:on_the_dynamics_of_integration=true
+    B:on_the_dynamics_of_integration=false
 
     # If the info book can give item rewards for tutorial completion.
-    B:on_the_dynamics_of_integration.bookRewards=true
+    B:on_the_dynamics_of_integration.bookRewards=false
 
     # If the info book should automatically obtained when the player first spawns.
     B:on_the_dynamics_of_integration.obtainOnSpawn=true
