--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -29,7 +29,7 @@ debug {
 
 difficulty {
     # Set to your preferred game mode. Mismatch with the server may cause visual glitches with recipes. [default: EASY] [valid: [OP, EASY, NORMAL, HARD]]
-    S:game.mode=EASY
+    S:game.mode=NORMAL
 
     # Forces recreation of the game mode definitions in config/forestry/gamemodes. [default: true]
     B:recreate.definitions=false
@@ -201,7 +201,7 @@ tweaks {
 
     book {
         # Players who enter the world for the first time get a Forester's Manual. [default: true]
-        B:spawn=true
+        B:spawn=false
     }
 
 }
@@ -233,6 +233,15 @@ world {
             I:dimBlacklist <
              >
             I:dimWhitelist <
+				111
+				66
+				20
+				4
+				-2
+				7
+				27
+				2
+				3
              >
 
             ##########################################################################################################
