Updated some mods

--- a/config/crossroads.cfg
+++ b/config/crossroads.cfg
@@ -11,6 +11,19 @@ alchemy {
 
 
 internal {
+    S:"Blocks that Crossroads shouldn't be able to destroy or replace. Should be in the format 'modid:blockregistryname', ex. 'minecraft:obsidian' or 'crossroads:block_salt'." <
+        minecraft:barrier
+        minecraft:command_block
+        minecraft:end_portal
+        minecraft:end_portal_frame
+        minecraft:nether_portal
+        minecraft:chain_command_block
+        minecraft:repeating_command_block
+        minecraft:end_gateway
+        minecraft:structure_block
+        minecraft:structure_void
+     >
+
     # Interval in ticks between gear network checks. (Range 100-2400, Default 300)
     I:"Gear Reset Time"=300
     B:"If you are crashing from StackOverflow errors and you either have a tiny amount of RAM or built an insanely large & complicated rotary setup, then set this to true, destroy the setup, and set this to false. Also maybe send me a picture of the setup."=false
