now generating osmium, dilithium, iridium, rutile and certus quarz. also reenabled AS oregen

--- a/config/astralsorcery.cfg
+++ b/config/astralsorcery.cfg
@@ -762,7 +762,7 @@ worldgen {
     B:enableFlatGen=false
 
     # Defines how many aquamarine ores it'll attempt to generate in per chunk. 0 = disabled [range: 0 ~ 2048, default: 64]
-    I:generateAquamarineAmount=0
+    I:generateAquamarineAmount=64
 
     # Defines how many marble veins are generated per chunk. 0 = disabled [range: 0 ~ 32, default: 4]
     I:generateMarbleAmount=0
@@ -993,20 +993,28 @@ worldgen {
 
         # Define an array of dimensionID's where the structure is allowed to spawn in. [default: ]
         S:DimensionWhitelist <
+			0
          >
 
         # Generate rockcrystals [default: true]
-        B:Generate=false
+        B:Generate=true
 
         # Ignore Biome specifications when trying to generate rockcrystals [default: true]
         B:IgnoreBiomeSpecification=true
 
         # Ignore dimension-whitelist when trying to generate rockcrystals [default: true]
-        B:IgnoreDimensionSettings=true
+        B:IgnoreDimensionSettings=false
 
         # Defines the blockstates that may be replaced by rock crystal ore when trying to generate a rock crystal ore. format: <modid>:<name>:<meta> - Use meta -1 for wildcard [default: [minecraft:stone:0]]
         S:ReplacementStates <
             minecraft:stone:0
+			undergroundbiomes:igneous_stone:-1
+			undergroundbiomes:metamorphic_stone:-1
+			undergroundbiomes:sedimentary_stone:-1
+			earthworks:block_slate:-1
+			earthworks:block_slate_green:-1
+			earthworks:block_slate_purple:-1
+			rustic:slate:-1
          >
     }
 
