updated novaterram, updated oregen

--- a/config/novamterram.cfg
+++ b/config/novamterram.cfg
@@ -46,6 +46,7 @@
     B:disableSavannaScrub=false
     B:disableScrubland=false
     B:disableSerengeti=false
+    B:disableTropicalDesert=false
 }
 
 
@@ -117,6 +118,7 @@
     B:disableGreenMixedForest=false
     B:disableGreenMixedForestHills=false
     B:disableGreenSwamp=false
+    B:disableHeath=false
     B:disableHighland=false
     B:disableHighlands=false
     B:disableHills=false
@@ -141,8 +143,10 @@
     B:disableRockyTaiga=false
     B:disableShrubland=false
     B:disableSprings=false
+    B:disableStoneMountains=false
     B:disableTallOakForest=false
     B:disableTallOakForestHills=false
+    B:disableTropicalSwamp=false
 }
 
 
