--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -127,6 +127,12 @@ crafting {
     B:com.bymarcin.zettaindustries.mods.battery.block.BlockGraphite=true
     B:com.bymarcin.zettaindustries.mods.battery.block.CharcoalBlock=true
     B:com.bymarcin.zettaindustries.mods.vanillautils.block.VariableRedstoneEmitter=true
+    B:com.ferreusveritas.cathedral.features.basalt.BlockBasalt=true
+    B:com.ferreusveritas.cathedral.features.basalt.BlockCheckered=true
+    B:"com.ferreusveritas.cathedral.features.dwemer.Dwemer$1"=true
+    B:"com.ferreusveritas.cathedral.features.dwemer.Dwemer$2"=true
+    B:"com.ferreusveritas.cathedral.features.extras.Extras$1"=true
+    B:"com.ferreusveritas.cathedral.features.extras.Extras$2"=true
     B:com.github.alexthe666.iceandfire.block.BlockDragonOre=true
     B:com.github.alexthe666.iceandfire.block.BlockFallingGeneric=true
     B:com.github.alexthe666.iceandfire.block.BlockGeneric=true
@@ -217,6 +223,12 @@ crafting {
     B:hellfirepvp.astralsorcery.common.block.BlockInfusedWood=true
     B:hellfirepvp.astralsorcery.common.block.BlockMarble=true
     B:ivorius.reccomplex.block.BlockGenericSolid=true
+    B:kipster.nt.blocks.blocks.BlockSands=true
+    B:kipster.nt.blocks.blocks.BlockSandstone=true
+    B:kipster.nt.blocks.blocks.BlockSandstoneCarved=true
+    B:kipster.nt.blocks.blocks.BlockSandstoneFace=true
+    B:kipster.nt.blocks.blocks.BlockSandstoneGlyph=true
+    B:kipster.nt.blocks.blocks.BlockSandstoneSmooth=true
     B:knightminer.ceramics.blocks.BlockClayHard=true
     B:knightminer.ceramics.blocks.BlockClayRainbow=true
     B:knightminer.ceramics.blocks.BlockClaySoft=true
