--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,10 +2,98 @@
 
 ~CONFIG_VERSION: 0.1.0
 
+world-1176931784 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=glider
+    B:overlayEnabled=true
+}
+
+
+world-1295035027 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-208716324 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=ruti
+    B:overlayEnabled=true
+}
+
+
+world-2137931835 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-358259472 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-78688046 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=diamond
+    B:overlayEnabled=true
+}
+
+
+world-905984103 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=planet 
+    B:overlayEnabled=true
+}
+
+
+world-958088821 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world107027 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=glider
+    B:overlayEnabled=true
+}
+
+
+world117307863 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1316508736 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world133492131 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -23,15 +111,34 @@ world246055144 {
 }
 
 
-world3552 {
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
+world3229 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=paper
+    B:overlayEnabled=true
+}
 
-    # Hide and unhide ingredients by clicking them in the list.
+
+world3347840 {
+    B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
 
-    # Show the list of ingredients next to open guis.
+
+world343413149 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world3552 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -40,6 +147,19 @@ world3556498 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world699689731 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
