--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -30,12 +30,15 @@ biomes {
 
 
 black_hole_generator {
+    # List of blocks and the amount of ticks they can power the black hole generator format: 'modname:block:meta;number_of_ticks'
     S:blackHoleTimings <
         minecraft:stone;1
         minecraft:dirt;1
         minecraft:netherrack;1
         minecraft:cobblestone;1
      >
+
+    # List of blocks and the amount of ticks they can power the black hole generator format: 'modname:block:meta;number_of_ticks'
     I:defaultBurnTime=500
 }
 
@@ -119,10 +122,14 @@ general {
 
     # If true dimensions not added by AR can be terraformed, including the overworld
     B:allowTerraformingNonARWorlds=false
+
+    # If true players will be able to completely disable gravity on spacestation.  It's possible to get stuck and require a teleport, you have been warned!
     B:allowZeroGSpacestations=false
 
     # How many blocks have the biome changed per tick.  Large numbers can slow the server down
     I:biomeUpdateSpeed=1
+
+    # Multiplier for the amount of power per tick the black hole generator should produce
     I:blackHoleGeneratorMultiplier=1
 
     # Multiplier for the build speed of the Rocket Builder (0.5 is twice as fast 2 is half as fast
@@ -289,7 +296,7 @@ performance {
 
 
 planet {
-    # List of Biomes to be blacklisted from spawning as BiomeIds, default is: river, sky, hell, void, alienForest [default: [7], [8], [9], [127], [168]]
+    # List of Biomes to be blacklisted from spawning as BiomeIds, default is: river, sky, hell, void, alienForest [default: [7], [8], [9], [127], [211]]
     S:BlacklistedBiomes <
         7
         8
@@ -298,13 +305,13 @@ planet {
         168
      >
 
-    # Biomes that only spawn on worlds with pressures over 125, will override blacklist.  Defaults: StormLands, DeepSwamp [default: [173], [171]]
+    # Biomes that only spawn on worlds with pressures over 125, will override blacklist.  Defaults: StormLands, DeepSwamp [default: [216], [214]]
     S:HighPressureBiomes <
         173
         171
      >
 
-    # Some worlds have a chance of spawning single biomes contained in this list.  Defaults: deepSwamp, crystalChasms, alienForest, desert hills, mushroom island, extreme hills, ice plains [default: [173], [172], [168], [17], [14], [3], [12]]
+    # Some worlds have a chance of spawning single biomes contained in this list.  Defaults: deepSwamp, crystalChasms, alienForest, desert hills, mushroom island, extreme hills, ice plains [default: [216], [215], [211], [17], [14], [3], [12]]
     S:SingleBiomes <
         173
         172
